Completed Modeling for Big Mountain Resort

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1413,7 +1413,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A: 2** The subsequent step involves presenting the results derived from the provided data and the employed model. One crucial aspect is delving into the available data to gain insights into how Big Mountain Resort arrived at its original ticket price. Were pertinent contextual factors, such as vertical drop, snowmaking, and total chairs, taken into account when determining the current ticket price? Additionally, considering other costs, like maintenance expenses for ski resorts—encompassing weather equipment and terrain upkeep—could provide valuable context.\n",
+    "\n",
+    "The model indicates a significantly higher predicted price than the current one, suggesting that, when compared to other resorts, Big Mountain has a lot to offer but has priced its services comparatively lower. This incongruity may come as a surprise to business executives who might have anticipated a price increase to position the resort as the most expensive in the market. Despite this, the business can continue utilizing the model with the assistance of data scientists to adapt to changes in data and shifts in the market.\n",
+    "\n",
+    "In communicating these findings to business analysts, I would emphasize how they can effectively leverage the model to gain valuable insights. Demonstrating ways to utilize the model for strategic decision-making and highlighting its potential impact on business outcomes could provide them with valuable tools for informed analysis.\n"
    ]
   }
  ],
